2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIALeaveVT):

	Force 3D context upload after a VT switch.
	
2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_dri.c: (viaDRIFBMemcpy), (viaDRIOffscreenSave):

	Fix up previous commit for > 16MB sizes. 

2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_dri.c: (viaDRIOffscreenSave),
	(viaDRIOffscreenRestore):
	* unichrome/via_driver.c: (VIAEnterVT), (VIALeaveVT):
	* unichrome/via_driver.h:

	Back up DRI offscreen memory before leaving VT and restore it
	when entering VT. It may be overwritten in between.
	Use PCI DMA blit for this if available.
	
2006-12-05  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAWriteMode), (VIAInitialize3DEngine):
	* unichrome/via_vbe.c: (ViaVbeSetMode):

	With EXA + 3D we need to reinitialize the 3D engine after
	a mode switch (possibly the soft reset + 2D engine
	initialization). Otherwise the GPU will hang.

2006-12-05 Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
	
	* unichrome/via_driver.c: (VIAPreInit):

	Fix the dma2d option setting.

2006-12-05  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_bandwidth.c: (ViaSetPrimaryFIFO):

	Use a more aggressive fifo setting for CLE266 Cx.
	Boosts performance.
	Please report problems with this.
	
2006-12-01  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via.man:
	* unichrome/via_bios.h:
	* unichrome/via_dri.c: (VIADRIScreenInit):
	* unichrome/via_driver.c: (VIAPreInit):
	* unichrome/via_driver.h:

	Remove unused options.
	First pass cleaning up option handling.
	Make most boolean options work as expected;
	(that is, accepting both a "true" and a "false" argument).
	
2006-10-29  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* libxvmc/viaLowLevel.c:
	* libxvmc/viaLowLevelPro.c:
	* unichrome/via_regs.h:
